"Actualización con modelo de GitHub"

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="/style.css" type="text/css">
 
-    <title>Desafio entregable Clase 10 - Handlebars</title>
+    <title>Lista de productos - Socket y Handlebars</title>
 </head>
 
 <body>
