--- a/views/lista.hbs
+++ b/views/lista.hbs
@@ -1,6 +1,6 @@
 {{!-- main.hbs --}}
+<div class="jumbotron">
 <h2>Listado de productos cargados</h2>
-
 {{#if listadoExiste}}
 <div class="table-responsive">
     <table class="table table-dark">
@@ -17,3 +17,4 @@
     <h3 class="alert alert-warning">No hay productos en en listado</h3>
 </div>
 {{/if}}
+</div>
