--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -21,6 +21,9 @@
 
     <link rel="stylesheet" href="/style.css" type="text/css">
 
+    <script src="../../socket.io/socket.io.js"></script>
+    <script src="../../public/index.js"></script>
+
     <title>Desafio entregable Clase 10 - Handlebars</title>
 </head>
 
