Funcionando salvo productos/vista

--- a/views/lista.hbs
+++ b/views/lista.hbs
@@ -1,11 +1,11 @@
 {{!-- main.hbs --}}
 <div class="jumbotron">
 <h2>Listado de productos cargados</h2>
-{{#if listadoExiste}}
+{{#if hayProductos}}
 <div class="table-responsive">
     <table class="table table-dark">
         <tr><th>Nombre</th><th>Precio</th><th>Foto</th></tr>
-        {{#each sugeridosProd}}
+        {{#each nuevosProductos}}
             <tr>
                 <td>{{this.title}}</td>
                 <td>AR${{this.price}}</td>
