Commit con todo funcionando

--- a/views/lista.hbs
+++ b/views/lista.hbs
@@ -5,7 +5,7 @@
 <div class="table-responsive">
     <table class="table table-dark">
         <tr><th>Nombre</th><th>Precio</th><th>Foto</th></tr>
-        {{#each nuevosProductos}}
+        {{#each productos}}
             <tr>
                 <td>{{this.title}}</td>
                 <td>AR${{this.price}}</td>
